added services page

--- a/beachrentals/beachrentals.html
+++ b/beachrentals/beachrentals.html
@@ -2,8 +2,48 @@
 <html lang="eng">
     <head>
         <meta charset="utf-8">
-        <title>Beach Rentals</title>
+        <link rel="stylesheet" href = 'styles.css'>
     </head>
+
+    <body>
+        <header>
+            <div class="flex-header">
+                <div class="flex-one">
+                    <h1>
+                        <a href = '../home.html'>
+                            Home
+                        </a>
+                    </h1>
+                    </div>
+
+                <div class="flex-two">
+                    <h1>
+                        <a href= "./beachrentals/beachrentals.html">
+                            Beach Rentals
+                        </a>
+                    
+                        </h1>
+                    </div>
+
+                <div class="flex-three">
+                    <h1>
+                        <a href = "../services/services.html">
+                        Services
+                        </a>
+                        </h1>
+                    </div>
+
+                <div class="flex-four">
+                    <h1>Store</h1>
+                    </div>
+
+                <div class="flex-five">
+                    <h1>Photos</h1>
+                    </div>
+            </div>
+        </header>
+
+
 
     <body>
         <div id="hometitle">
