--- a/home.html
+++ b/home.html
@@ -10,7 +10,11 @@
         <header>
             <div class="flex-header">
                 <div class="flex-one">
-                    <h1>Home</h1>
+                    <h1>
+                        <a href = './home.html'>
+                            Home
+                        </a>
+                    </h1>
                     </div>
 
                 <div class="flex-two">
@@ -23,7 +27,10 @@
                     </div>
 
                 <div class="flex-three">
-                    <h1>Services</h1>
+                    <h1>
+                        <a href = "./services/services.html">
+                        Services</a>
+                        </h1>
                     </div>
 
                 <div class="flex-four">
