--- a/home.html
+++ b/home.html
@@ -46,14 +46,20 @@
             <div id="hometitle">
             <p><strong>Welcome to Jolly Jareds!</strong></p>
             </div>
-
-            <div id="mainnotice">
-                <p>DUE TO THE COVID-19 PANDEMIC JOLLY JARED'S BEACH RENTALS IS CURRENTLY CLOSED.
-                    WE APOLOGIZE FOR ANY INCONVENIENCE THIS 
-                    MAY CAUSE AND LOOK FORWARD TO SERVING YOU AGAIN IN THE NEAR FUTURE.
-                    PLEASE DO NOT PLACE ANY ONLINE ORDERS AS WE CAN NOT ACCOMMODATE YOUR REQUEST AT THIS TIME.
-                    THANK YOU.</p>
+            
+            <div class="container">
+                <div id="mainnotice">
+                    <p>DUE TO THE COVID-19 PANDEMIC JOLLY JARED'S BEACH RENTALS IS CURRENTLY CLOSED.
+                        WE APOLOGIZE FOR ANY INCONVENIENCE THIS 
+                        MAY CAUSE AND LOOK FORWARD TO SERVING YOU AGAIN IN THE NEAR FUTURE.
+                        PLEASE DO NOT PLACE ANY ONLINE ORDERS AS WE CAN NOT ACCOMMODATE YOUR REQUEST AT THIS TIME.
+                        THANK YOU.</p>
+                </div>
+                <div class="image1">
+                    <img src="flyerbeach.jpg" alt="Jared on Beach Holding Sign">
+                </div>
             </div>
+
 
             <div id="text">
                 <p>This website is dedicated to help promote my small businesses and to educate people that individuals with disabilities can succeed with a little bit of help from their family and friends.
@@ -63,7 +69,7 @@
                     Sincerely,
                     Jolly Jared</p>
             </div>
-            
+            </div>
         </div>
 
     </body>
